--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -2,14 +2,11 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
-      <trans-unit id="TitleHeader" datatype="html">
-        <source>
-          Hello <x id="INTERPOLATION"/>
-        </source>
-        <target>Hello</target>
+      <trans-unit id="subTitle" datatype="html">
+        <source>sub <x id="INTERPOLATION"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">app\app.component.ts</context>
-          <context context-type="linenumber">1</context>
+          <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
     </body>
